[package]
name = "range-traits"
version = "0.2.0"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Ranges related traits."
categories = ["data-structures"]
keywords = ["range", "trait", "datatype"]
repository = "https://github.com/timothee-haudebourg/range-traits"
documentation = "https://docs.rs/range-traits"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
ordered-float = { version = "3.0.0", optional = true }